@@ -9,7 +9,7 @@
 # 
 #  File        :  $Source: /cvsroot/ijbswa/current/default.action.master,v $
 # 
-#  $Id: default.action.master,v 1.119 2008/03/26 17:42:24 fabiankeil Exp $
+#  $Id: default.action.master,v 1.120 2008/03/27 18:27:36 fabiankeil Exp $
 #
 #  Requires    :  This version requires Privoxy v3.0.9 or later due to 
 #                 syntax changes.
@@ -379,9 +379,6 @@
 #    Treat this URL as an image.  This only matters if it's also "+block"ed,
 #    in which case a "blocked" image can be sent rather than a HTML page.
 #    See +set-image-blocker{} for the control over what is actually sent.
-#
-# +inspect-jpegs
-#    Scan jpeg headers for malformed comment blocks and correct them.
 #
 # +limit-connect{portlist}
 #   The CONNECT methods exists in HTTP to allow access to secure websites
